--- a/css/style.css
+++ b/css/style.css
@@ -180,11 +180,15 @@ h6 {
 }
 
 #intro .carousel-item {
-  width: 100%;
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    max-width: 100%;
+    /* Add additional effect */
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
 }
 
 #intro .carousel-item::before {
@@ -219,11 +223,12 @@ h6 {
   right: 0;
 }
 
+/*
+    Don't think this ever gets applied, since the .js file
+    merges .carousel-background with .carousel-item
+*/
 #intro .carousel-background img {
     max-width: 100%;
-    /* Add additional effect */
-    filter: blur(4px) brightness(30%);
-    -webkit-filter: blur(4px) brightness(30%);
 }
 
 .special {
@@ -232,11 +237,18 @@ h6 {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    z-index: 1000
+    z-index: 10;
 }
 
 .special p {
     display: inline-block;
+}
+
+.headshot img {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    margin-bottom: 30px;
 }
 
 #intro .carousel-content {
