--- a/css/style.css
+++ b/css/style.css
@@ -175,13 +175,13 @@ h6 {
 #intro {
   display: table;
   width: 100%;
-  height: 100vh;
+  height: 60vh;
   background: #000;
 }
 
 #intro .carousel-item {
     width: 100%;
-    height: 100vh;
+    height: 60vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -233,7 +233,7 @@ h6 {
 
 .special {
     position: absolute;
-    top: 50%;
+    top: 30vh;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -245,8 +245,8 @@ h6 {
 }
 
 .headshot img {
-    width: 400px;
-    height: 400px;
+    width: 20%;
+    height: 20%;
     border-radius: 50%;
     margin-bottom: 30px;
 }
