Finished responsive adaptation to landscape mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -267,10 +267,12 @@ h6 {
 
 .special {
     position: absolute;
+    width: 80%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    /*padding-top: 100px;*/
     z-index: 10;
 }
 
@@ -281,6 +283,9 @@ h6 {
 
 .headshot {
     margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .headshot img {
@@ -1231,7 +1236,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
+/*@media (max-width: 768px) {*/
   .back-to-top {
     bottom: 15px;
   }
@@ -1258,7 +1264,24 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 @media (max-height: 576px) {
+    .headshot img {
+        width: 100% !important;
+        height: auto !important;
+    }
 
+    .headshot {
+        margin-bottom: 0px;
+    }
+}
+
+/* On iPads, each element should span full row */
+/*@media (min-height: 1024px) and (max-height: 1200px) {*/
+@media not screen and (orientation:landscape) {
+    .col-sm-4, .col-sm-8 {
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
 
 @media (max-width: 1024px) {
