--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,12 @@ h6 {
     align-items: center;
 }
 
+#mini-about-me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .headshot img {
     width: 240px;
     height: 240px;
@@ -1263,7 +1269,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 }
 
-@media (max-height: 576px) {
+/* Responseive adaptiveness to mobile landscape */
+@media screen and (orientation: landscape) and (max-height: 480px) and (min-width: 576px) and (max-width: 992px) {
     .headshot img {
         width: 100% !important;
         height: auto !important;
@@ -1272,17 +1279,34 @@ body.mobile-nav-active #mobile-nav-toggle {
     .headshot {
         margin-bottom: 0px;
     }
+
+    .headshot {
+        -ms-flex: 0 0 33.333333%;
+        flex: 0 0 33.333333%;
+        max-width: 33.333333%;
+    }
+
+    #mini-about-me {
+        -ms-flex: 0 0 66.666667%;
+        flex: 0 0 66.666667%;
+        max-width: 66.666667%;
+    }
+
+    .special div {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 /* On iPads, each element should span full row */
 /*@media (min-height: 1024px) and (max-height: 1200px) {*/
-@media not screen and (orientation:landscape) {
+/*@media not screen and (orientation:landscape) {
     .col-sm-4, .col-sm-8 {
         -ms-flex: 0 0 100%;
         flex: 0 0 100%;
         max-width: 100%;
     }
-}
+}*/
 
 @media (max-width: 1024px) {
     .headshot img {
